--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,13 @@
 <body>
     <header class="header">
         <a href="#" class="logo">DataGuru.</a>
-        <nav class="navbar">
-        
-                <a href="#" class="Active">Home</a>
-                <a href="#" class="Active">About Me</a>
-                <a href="#"class="Active">Projects</a>
-                <a href="#"class="Active">Education</a>
-                <a href="#"class="Active">Contact</a>
-    </nav>
+        <div class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about"class="active">About</a>
+            <a href="#education"class="active">Education</a>
+            <a href="#projects"class="active">Projects</a>
+            <a href="#contact"class="active">Contact</a>
+          </div>
     </header>
       <section id="home" class="home">
         <div class="home-content">
