--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
             <h1>Hi, I'm Edith,</h1>
             <H3>AI Enthusiast and Data Analyst</H3>
             <p>
-                Passionate about technology and social change, I am dedicated to harnessing data to solve real-world challenges.
-                With a keen interest in AI and data analytics, I strive to leverage data-driven insights to support social justice initiatives
-                and community development projects.
+    I am a curious mind fueled by data, driven by purpose, and slightly obsessed with turning patterns
+    into possibilities. As a passionate <strong>AI enthusiast</strong> and an evolving <strong>data analyst</strong>,
+    I thrive at the intersection where creativity meets code and insights spark innovation. Whether it’s decoding datasets,
+    building visual narratives, or exploring how artificial intelligence can solve real-world problems, I’m always looking 
+    for ways to learn, grow, and build meaningful digital experiences. When I’m not deep-diving into Python scripts or 
+    mapping out data models, you’ll probably find me brainstorming bold ideas, sketching interfaces, or geeking out over 
+    the latest AI breakthroughs. This portfolio is a window into my world — welcome aboard!
             </p>
             <div class="home-img">
                 <img src="mypic.jpg" alt="A photo of Edith">
