--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -46,12 +47,12 @@
        <section id="about" class="about">
        <h1>About Me</h1>
        <p>
-        I am a budding researcher at the intersection of social sciences and data science. I am dedicated to advancing knowledge
-        at the crossroads of social sciences and data science, focusing on addressing pressing societal issues such as social
-        inequality and community development.
-        I aspire to bridge the gap between theory and practice, advocating for social justice and environmental sustainability
-        through rigorous research and data-driven solutions.
-        I thrive in environments that challenge thinking and foster innovation, always eager to learn from others and get exposure.
+       I am a budding development strategist at the Intersection of Social Sciences and Data Science. I am dedicated to advancing 
+       knowledge at the crossroads, focusing on addressing pressing societal issues while integrating technology to develop 
+       sustainable solutions.
+       I aspire to bridge the gap between theory and practice, advocating for social justice and environmental sustainability
+       through rigorous research and data-driven solutions.
+       I thrive in environments that challenge thinking and foster innovation, always eager to learn from others and get exposure.
        </p>
 
 
