--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <title>Edith's Portfolio website </title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo" style="text-decoration: none;">DataGuru.</a>
-        <div class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about"class="active">About</a>
-            <a href="#education"class="active">Education</a>
-            <a href="#projects"class="active">Projects</a>
-            <a href="#contact"class="active">Contact</a>
-          </div>
+        <a href="#" class="logo">DataGuru.</a>
+        
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+
+        <div class="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
       <section id="home" class="home">
         <div class="home-content">
