--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -24,7 +25,9 @@
             <span></span>
             <span></span>
             <span></span>
-          </div>
+        </div>
+
+        <div class="mobile-menu-overlay"></div>
     </header>
 
     <main>
@@ -41,14 +44,14 @@
                 <span>Get Started</span>
                 <i class='bx bx-right-arrow-alt'></i>
             </a>
+            <div class="h-icons">
+                <a href="https://github.com/edithcalm" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/edith-karanja/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://instagram.com/edithkaranja_/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
         <div class="home-img">
             <img src="mypic.jpg" alt="Edith's Profile Picture">
-            <div class="h-icons"> 
-                <a href="https://github.com/edithcalm" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/edith-karanja/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
-                <a href="https://instagram.com/edithkaranja_/" target="_blank"><i class='bx bxl-instagram'></i></a>
-            </div>
         </div>
       </section>
 
