--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edith's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav-styles.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="script.js" defer></script>
@@ -14,11 +15,11 @@
         <a href="#" class="logo">DataGuru.</a>
         
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#education">Education</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="#home" style="--i:1">Home</a>
+            <a href="#about" style="--i:2">About</a>
+            <a href="#education" style="--i:3">Education</a>
+            <a href="#projects" style="--i:4">Projects</a>
+            <a href="#contact" style="--i:5">Contact</a>
         </nav>
 
         <div class="hamburger-menu">
@@ -40,10 +41,7 @@
                 into possibilities. As a passionate <strong>AI enthusiast</strong> and an evolving <strong>data analyst</strong>,
                 I thrive at the intersection where creativity meets code and insights spark innovation.
             </p>
-            <a href="#contact" class="cta-button">
-                <span>Get Started</span>
-                <i class='bx bx-right-arrow-alt'></i>
-            </a>
+          
             <div class="h-icons">
                 <a href="https://github.com/edithcalm" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/edith-karanja/" target="_blank"><i class="fab fa-linkedin"></i></a>
