--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">DataGuru.</a>
-        
-        <nav class="navbar">
-            <a href="#home" style="--i:1">Home</a>
-            <a href="#about" style="--i:2">About</a>
-            <a href="#education" style="--i:3">Education</a>
-            <a href="#projects" style="--i:4">Projects</a>
-            <a href="#contact" style="--i:5">Contact</a>
-        </nav>
-
-        <div class="hamburger-menu">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="navbar-container">
+            <a href="#" class="logo">DataGuru.</a>
+            <nav class="navbar">
+                <a href="#home" style="--i:1">Home</a>
+                <a href="#about" style="--i:2">About</a>
+                <a href="#education" style="--i:3">Education</a>
+                <a href="#projects" style="--i:4">Projects</a>
+                <a href="#contact" style="--i:5">Contact</a>
+            </nav>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-
         <div class="mobile-menu-overlay"></div>
     </header>
 
@@ -320,9 +319,9 @@
             <div class="footer-column">
                 <div class="footer-logo">
                     <h2>Edith Karanja</h2>
-                    <p>Software Developer</p>
+                    <p>Data Scientist</p>
                 </div>
-                <p class="footer-about">Passionate about creating elegant solutions to complex problems. Specializing in web development and software engineering.</p>
+                <p class="footer-about">Passionate about creating elegant solutions to complex problems. Specializing in data science and software engineering.</p>
             </div>
 
             <div class="footer-column">
