--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="h-icons">
                 <a href="https://github.com/edithcalm" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/edith-karanja/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://instagram.com/edithkaranja_/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/karanja3dith/" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <div class="home-img">
@@ -268,7 +268,7 @@
                             <a href="https://www.linkedin.com/in/edith-karanja/" target="_blank" title="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="https://instagram.com/edithkaranja_/"target="_blank" title="Instagram">
+                            <a href="https://instagram.com/karanja3dith/"target="_blank" title="Instagram">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </div>
